# twitch-tts

./: .gitignore  LICENSE  Makefile  README.md  app.go  audio.go  config.go  go.mod  go.sum  install.sh  main.go  oauth.go  pyproject.toml  uninstall.sh  voicevox.go  wails.json
.github/workflows/: release.yml
aur/: PKGBUILD
frontend/: index.html
frontend/src/: App.svelte  style.css
src/twitch_tts/: app.py  main.py  twitch_client.py  voicevox.py
