[project]
name = "twitch-tts"
version = "0.1.0"
description = "Twitch chat TTS reader using VOICEVOX"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "twitchio>=2.9",
    "aiohttp>=3.9",
]

[project.scripts]
twitch-tts = "twitch_tts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twitch_tts"]
